--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="initial-wrapper">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand orangeText" href="#">tushar.</a>
+          <a class="navbar-brand orangeText" href="">tushar.</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -54,25 +54,30 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav navbar-nav-user">
-              <a class="nav-link nav-link-anime1" aria-current="page" href="#"
+              <a
+                class="nav-link nav-link-anime1"
+                aria-current="page"
+                href="#home"
                 >HOME</a
               >
-              <a class="nav-link nav-link-anime2" href="#">ABOUT</a>
-              <a class="nav-link nav-link-anime3" href="#">PROJECT</a>
-              <a class="nav-link nav-link-anime4" href="#">SKILLS</a>
+              <a class="nav-link nav-link-anime2" href="#about">ABOUT</a>
+              <a class="nav-link nav-link-anime3" href="#project">PROJECT</a>
+              <a class="nav-link nav-link-anime4" href="#skill">SKILLS</a>
             </div>
             <div class="navbar-nav">
               <div class="navbar-nav-icon">
-                <a class="nav-link" href="#"
+                <a class="nav-link" href="https://github.com/tushar885"
                   ><i class="fa-brands fa-github"></i
                 ></a>
-                <a class="nav-link" href="#"
+                <a
+                  class="nav-link"
+                  href="https://www.instagram.com/tushar.sharma85/"
                   ><i class="fa-brands fa-instagram"></i
                 ></a>
-                <a class="nav-link" href="#"
+                <a class="nav-link" href="https://twitter.com/tushars_85"
                   ><i class="fa-brands fa-twitter"></i
                 ></a>
-                <a class="nav-link" href="#"
+                <a class="nav-link" href="https://medium.com/@tushar85"
                   ><i class="fa-brands fa-medium"></i
                 ></a>
               </div>
@@ -91,7 +96,7 @@
             class="carousel-item active carousel-item-one"
             data-bs-interval="600000"
           >
-            <div class="carousel-item-content carousel-item-home">
+            <div class="carousel-item-content carousel-item-home" id="home">
               <div class="home-content-wrapper">
                 <div class="hello">
                   <span class="orangeText">Hello, I'm</span>
@@ -138,7 +143,10 @@
             class="carousel-item carousel-item-sec"
             data-bs-interval="600000"
           >
-            <div class="carousel-item-content carousel-item-content-sec">
+            <div
+              class="carousel-item-content carousel-item-content-sec"
+              id="project"
+            >
               <div class="project-decor-bgImage">
                 <img src="assests/9.png" alt="" />
               </div>
@@ -151,17 +159,26 @@
                 </div>
                 <div class="projects-grid">
                   <div class="project-item project-item-one">
-                    <div class="project-item-one-back">restAPI</div>
+                    <a
+                      href="https://tushar885.github.io/rest-countries-api_app/"
+                    >
+                      <div class="project-item-one-back">restAPI</div>
+                    </a>
+
                     <img src="assests/restAPI.jpg" alt="" />
                   </div>
 
                   <div class="project-item project-item-second">
-                    <div class="project-item-second-back">calc App</div>
+                    <a href="https://tushar885.github.io/calculator/">
+                      <div class="project-item-second-back">calc App</div>
+                    </a>
                     <img src="assests/calc.jpg" alt="" />
                   </div>
 
                   <div class="project-item project-item-three">
-                    <div class="project-item-three-back">blogr</div>
+                    <a href="https://tushar885.github.io/blogr-landing-page/">
+                      <div class="project-item-three-back">blogr</div>
+                    </a>
                     <img src="assests/blogr.jpg" alt="" />
                   </div>
                 </div>
@@ -172,7 +189,10 @@
             class="carousel-item carousel-item-three"
             data-bs-interval="600000"
           >
-            <div class="carousel-item-content carousel-item-content-three">
+            <div
+              class="carousel-item-content carousel-item-content-three"
+              id="skill"
+            >
               <div class="skills-decor-bgImage">
                 <img src="assests/8.png" alt="" />
               </div>
@@ -310,22 +330,24 @@
         <div class="footer-item">
           <ul>
             <li>
-              <a class="footer-link" href="#"
+              <a class="footer-link" href="https://github.com/tushar885"
                 ><i class="fa-brands fa-github"></i
               ></a>
             </li>
             <li>
-              <a class="footer-link" href="#"
+              <a
+                class="footer-link"
+                href="https://www.instagram.com/tushar.sharma85/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
             </li>
             <li>
-              <a class="footer-link" href="#"
+              <a class="footer-link" href="https://twitter.com/tushars_85"
                 ><i class="fa-brands fa-twitter"></i
               ></a>
             </li>
             <li>
-              <a class="footer-link" href="#"
+              <a class="footer-link" href="https://medium.com/@tushar85"
                 ><i class="fa-brands fa-medium"></i
               ></a>
             </li>
@@ -343,3 +365,4 @@
     <script src="app.js"></script>
   </body>
 </html>
+
