about me updated
removed the lorem ipsum text and updated the content of the about me section

--- a/index.html
+++ b/index.html
@@ -298,21 +298,21 @@
       <div class="about-content-wrapper">
         <div class="about-hero"><img src="assests\about.svg" alt="" /></div>
         <div class="about-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit vitae
-          facere, laboriosam labore sunt tenetur blanditiis impedit earum nam,
-          voluptates necessitatibus? Totam praesentium unde vel sed voluptates
-          id sequi consectetur.
+          Hello.
+          I'm a 17-year-old, sophomore student in the B.tech program, 
+          who loves to learn about 
+          new technologies and build rigid and robust applications 
+          and web apps to solve real-world problems.
+         
           <p>
             <strong
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consequuntur error consequatur amet aperiam
+              >I'm an aspiring full-stack web developer, carving my path for the same form last 1 year. I love to work with expressjs and I'm currently learning reactjs.
             </strong>
           </p>
-
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit vitae
-          facere, laboriosam labore sunt tenetur blanditiis impedit earum nam,
-          voluptates necessitatibus? Totam praesentium unde vel sed voluptates
-          id sequi consectetur.
+          The thing I love the most about development is the teamwork, I love 
+          to interact with my fellows, whose minds are filled with the spark of ideas.
+          I would love to collaborate on web projects with you and even to meet you, 
+          so feel free to reach me.
         </div>
       </div>
     </div>
