--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
          
           <p>
             <strong
-              >I'm an aspiring full-stack web developer, carving my path for the same form last 1 year. I love to work with expressjs and I'm currently learning reactjs.
+              >I'm an aspiring full-stack web developer, carving my path for the same from last 1 year. I love to work with expressjs and I'm currently learning reactjs.
             </strong>
           </p>
           The thing I love the most about development is the teamwork, I love 
