--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
                 <a class="nav-link" href="https://twitter.com/tushars_85"
                   ><i class="fa-brands fa-twitter"></i
                 ></a>
+                
                 <a class="nav-link" href="https://medium.com/@tushar85"
                   ><i class="fa-brands fa-medium"></i
                 ></a>
+                <a class="nav-link" href="mailto:tushar8104@gmail.com"
+                  ><i class="fa-solid fa-envelope"></i></a>
               </div>
             </div>
           </div>
